--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -141,7 +141,7 @@
                 <div class="col-md-5 offset-md-1">
                   <div class="detail-box">
                     <h1>
-                      You Can <br>
+                      Youuuuuuuuuuuuuuuuuuuuuuuuuuu Can <br>
                       Hire Freelancer <br>
                       Here
                     </h1>
